src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_StyleSetterChild2.xaml
<!--
/*******************************************************************
 * Purpose: Nested Setter child under Style Setter tag.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_StyleSetterChild2.xaml $
********************************************************************/
-->
<Page
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
    <DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
        <DockPanel.Resources>
            <Style TargetType="{x:Type Button}">
                <Setter Property="Background" Value="Blue">
                    <Setter Property="Background" Value="Blue" />
                </Setter>
            </Style>
        </DockPanel.Resources>
    </DockPanel>
</Page>
